# unicodeit-gtk

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/unicodeit_gtk/: __init__.py  app.py  one_shot_entry_point.py  server_entry_point.py  styling.py  virtual_input.py
src/unicodeit_gtk/gui/: __init__.py  app.py  completion.py  input.py  output.py  window.py
unicodeit_gtk/: __init__.py  app.py  one_shot_entry_point.py  server_entry_point.py
