[project]
name = "unicodeit-gtk"
version = "1.3.1"
description = "A GTK IME popup for entering symbols via (La)TeX"
license = "Unlicense"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]

dependencies = [
  "pygobject (>=3.54.5)",
  "unicodeit (>=0.7.5)",
  "setproctitle (>=1.3.7)",
]

[project.urls]
Repository = "https://github.com/v--/unicodeit-gtk.git"
Changelog = "https://github.com/v--/unicodeit-gtk/blob/master/CHANGELOG.md"

[project.scripts]
unicodeit-gtk = "unicodeit_gtk:one_shot_entry_point"
unicodeit-gtk-server = "unicodeit_gtk:server_entry_point"

[dependency-groups]
dev = [
  "pygobject-stubs (>=2.16.0)",
  "mypy (>=1.19.1)",
  "ruff (>=0.15.2)",
]

[build-system]
requires = ["uv_build (>=0.10.5, <0.11.0)"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
packages = ["unicodeit_gtk"]

[[tool.mypy.overrides]]
module = [
  "unicodeit.*"
]
ignore_missing_imports = true
