[project]
name = "unicodeit-gtk"
version = "1.3.3"
description = "A GTK IME popup for entering symbols via (La)TeX"
license = "Unlicense"
readme = "README.md"
requires-python = ">=3.10, <4.0"
authors = [
  { name = "Ianis Vasilev", email = "ianis@ivasilev.net" }
]

dependencies = [
  "pygobject (>=3.54)",
  "unicodeit (>=0.7.5)",
  "setproctitle (>=1.3)",
]

[project.urls]
Repository = "https://github.com/v--/unicodeit-gtk.git"
Changelog = "https://github.com/v--/unicodeit-gtk/blob/master/CHANGELOG.md"

[project.scripts]
unicodeit-gtk = "unicodeit_gtk:one_shot_entry_point"
unicodeit-gtk-server = "unicodeit_gtk:server_entry_point"

[dependency-groups]
dev = [
  "pygobject-stubs (>=2.16)",
  "mypy (>=1.19)",
  "ruff (>=0.15)",
]

[build-system]
# uv build complains if no upper bound is set, but it updates its minor versions often, so we put a major version just to shut it up
requires = ["uv_build (>=0.10, <1)"]
build-backend = "uv_build"

# uv
[tool.uv]
resolution = "lowest-direct"

# ruff
[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
packages = ["unicodeit_gtk"]

[[tool.mypy.overrides]]
module = [
  "unicodeit.*"
]
ignore_missing_imports = true
